src/objects/Siva_sample_setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Siva_sample_setting</label>
    <fields>
        <fullName>Enable_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <externalId>true</externalId>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>currency_data__c</fullName>
        <label>currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>email_address__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>emailid</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>onboard_date__c</fullName>
        <label>onboard_date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>percentage_i__c</fullName>
        <label>percentage_i</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>randomId__c</fullName>
        <label>randomId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sample_url__c</fullName>
        <label>sampleUrl</label>
        <type>Url</type>
    </fields>
</CustomObject>